--- a/index.html
+++ b/index.html
@@ -493,21 +493,21 @@
 
 
             <div style="display: flex; flex-direction: column; gap: 16px;">
-                <img src="./aaronkovacs.jpeg" width="120" height="120" style="border-radius: 25px;" />
+                <img src="./julia.jpg" width="120" height="120" style="border-radius: 25px;" />
                 <p style="margin: 0; font-size: 0.8em; font-weight: 800;" >Julia Showl</p>
-                <p style="margin: 0;  font-size: 0.6em; font-weight: 400; max-width: 400px;">Wondering who that actor is? Where have you seen them before? Find out with the tap of one button. We'll show you every actor currently on screen all from your phone.</p>
+                <p style="margin: 0;  font-size: 0.6em; font-weight: 400; max-width: 400px;">Julia is currently a senior at the George Washington University majoring in computer science. Her current interests are data analytics and data science. </p>
             </div>
 
             <div style="display: flex; flex-direction: column; gap: 16px; margin-top: 1em;">
                 <img src="./ryanrosica.jpeg" width="120" height="120" style="border-radius: 25px;" />
                 <p style="margin: 0; font-size: 0.8em; font-weight: 800;" >Ryan Rosica</p>
-                <p style="margin: 0;  font-size: 0.6em; font-weight: 400; max-width: 400px;"></p>
+                <p style="margin: 0;  font-size: 0.6em; font-weight: 400; max-width: 400px;">Senior Graduating in Computer Science at GWU. Plans to move to Seattle and work on Amazon's AWS.</p>
             </div>
 
             <div style="display: flex; flex-direction: column; gap: 16px; margin-top: 1em;">
                 <img src="./aaronkovacs.jpeg" width="120" height="120" style="border-radius: 25px;" />
                 <p style="margin: 0; font-size: 0.8em; font-weight: 800;" >Aaron Kovacs</p>
-                <p style="margin: 0;  font-size: 0.6em; font-weight: 400; max-width: 400px;">Senior Graduating in Computer Science at GWU. Work on app and server development.</p>
+                <p style="margin: 0;  font-size: 0.6em; font-weight: 400; max-width: 400px;">Senior Graduating in Computer Science at GWU. Plans to move to New York to work at a startup.</p>
             </div>
 
         </div>
