--- a/index.html
+++ b/index.html
@@ -489,7 +489,16 @@
 
         <div class="extra-highlight">
             <h2 style="padding-top: 32px; margin-bottom: 50px;" class="more-title">Stop reading. Start Watching.</h2>
-            <h4 style="padding-top: 48px; margin-bottom: 2.0em;" class="more-title">Meet the team</h4>
+
+            <h4 style="padding-top: 48px; margin-bottom: 0.3em;" class="more-title">Technical Specifications</h4>
+            <p style="margin: 0;  font-size: 0.6em; font-weight: 400; max-width: 400px;">SubtitleVision is an iOS app written in Swift primarily using SwiftUI for layout and UI. Our backend is writtent in Python and uses open source forced alignment models combined with PyTorch. Summary is powered by the ChatGPT API. For further information view our architecture documentation below.</p>
+
+            <h4 style="padding-top: 48px; margin-bottom: 0.3em;" class="more-title">Relevant Links</h4>
+            <p><a href="www.google.com" style="color: #F89717;">Executive Summary</a></p>
+            <p><a href="www.google.com" style="color: #F89717;">Software Architecture</a></p>
+            <p><a href="www.google.com" style="color: #F89717;">Poster</a></p>
+
+            <h4 style="padding-top: 32px; margin-bottom: 2.0em;" class="more-title">Meet the team</h4>
 
 
             <div style="display: flex; flex-direction: column; gap: 16px;">
